---
source: src/syntax/latex/lexer.rs
assertion_line: 601
expression: "verify(\"Foo\\\\iffalse\\n\\\\Bar{Baz}\\n\\\\fi\\\\Qux\")"
---
[
    (
        WORD,
        "Foo",
    ),
    (
        BEGIN_BLOCK_COMMENT_NAME,
        "\\iffalse",
    ),
    (
        VERBATIM,
        "\n\\Bar{Baz}\n",
    ),
    (
        END_BLOCK_COMMENT_NAME,
        "\\fi",
    ),
    (
        GENERIC_COMMAND_NAME,
        "\\Qux",
    ),
]
